<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yCk-or-RJf">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Get Pet By Id View Controller-->
        <scene sceneID="ArY-Qd-Rmi">
            <objects>
                <viewController id="yCk-or-RJf" customClass="GetPetByIdViewController" customModule="XcodeGenTestApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="J3N-h7-sDe">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="P5z-Ip-p6M">
                                <rect key="frame" x="18" y="62" width="378" height="782"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="jfg-sO-x5l">
                                        <rect key="frame" x="0.0" y="0.0" width="378" height="34"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="petId" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e2E-Nl-Z8A">
                                                <rect key="frame" x="0.0" y="7" width="39.5" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kVb-4x-dvb">
                                                <rect key="frame" x="57.5" y="0.0" width="320.5" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="petId_textfield"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YDj-Jf-4gf">
                                        <rect key="frame" x="0.0" y="52" width="378" height="30"/>
                                        <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="request_button"/>
                                        <state key="normal" title="Request">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="didTapRequestButton:" destination="yCk-or-RJf" eventType="touchUpInside" id="4LN-pt-3Dg"/>
                                        </connections>
                                    </button>
                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="eY6-2K-neC">
                                        <rect key="frame" x="0.0" y="100" width="378" height="682"/>
                                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="response_textview"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="JdQ-xM-sLI" firstAttribute="trailing" secondItem="P5z-Ip-p6M" secondAttribute="trailing" constant="18" id="ZO0-EG-TdL"/>
                            <constraint firstItem="P5z-Ip-p6M" firstAttribute="top" secondItem="JdQ-xM-sLI" secondAttribute="top" constant="18" id="mIl-Y7-vcw"/>
                            <constraint firstItem="P5z-Ip-p6M" firstAttribute="leading" secondItem="JdQ-xM-sLI" secondAttribute="leading" constant="18" id="xD3-Rv-GyK"/>
                            <constraint firstItem="JdQ-xM-sLI" firstAttribute="bottom" secondItem="P5z-Ip-p6M" secondAttribute="bottom" constant="18" id="xSz-5T-UyX"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="JdQ-xM-sLI"/>
                    </view>
                    <connections>
                        <outlet property="petIdTextField" destination="kVb-4x-dvb" id="JV0-3V-2NO"/>
                        <outlet property="responseTextView" destination="eY6-2K-neC" id="OUD-Uw-ib3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="AIF-wW-yBa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="142" y="86"/>
        </scene>
    </scenes>
</document>
