...
                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BTm-VM-Gsq" id="7Lj-wH-Ruf">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="GET ​/pet​/{petId}" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="43q-I3-IrJ">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="43.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
            <point key="canvasLocation" x="1676" y="117"/>
        </scene>
        <!--Pet-->
        <scene sceneID="5NN-Ep-Ba5">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eYj-s8-lv9" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Pet" image="dog" id="txK-kn-CqT"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lwo-5V-q8W">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
